# service_layer

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .golangci.yml  .prettierrc  ARCHITECTURE_REFACTORING_FINAL.md  ARCHITECTURE_REFACTORING_SUMMARY.md  CHANGELOG.md  CLEANUP_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  Dockerfile  LICENSE  Makefile  README.md  REFACTORING_OPTIMIZATION_REPORT.md  RELEASE.md  RELEASE_NOTES_v1.0.0.md  REVIEW_CHECKLIST.md  REVIEW_PLAN.md  REVIEW_REPORT.md  SECURITY_FIXES_SUMMARY.md  docker-compose.yml  enclave.json  eslint.config.js  eslint.config.mjs  fairy.toml  go.mod  go.sum  index.html  package-lock.json  package.json  parallel_build.py  pnpm-lock.yaml  pnpm-workspace.yaml  polymarket-homepage-snapshot.md  tsconfig.base.json  (+3 more)
.Droid/: go-review-plan.md
.changeset/: config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.vercel/: project.json
applications/: application.go  engine_app.go  services.go  test_helpers.go
config/: chains.json  development.env  production.env  services.yaml  testing.env  tsconfig.expo.json  tsconfig.lib.json  tsconfig.miniapp.json  tsconfig.nextjs.json
configs/: README.md  config.migrate.yaml  config.yaml  prometheus.yml
contracts/: " + tmp + "  README.md  Test.cs  TestInheritance.cs  build.sh  update_all_mainnet.sh  update_all_testnet.sh  update_dailycheckin.sh
deploy/: Makefile  README.md
devops/: Dockerfile  README.md  docker-compose.yml
docker/: Dockerfile.gateway  Dockerfile.nextjs  Dockerfile.service  docker-compose.simulation.yaml  docker-compose.yaml  sgx_default_qcnl.conf
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_EXCELLENCE.md  CODE_IMPROVEMENTS.md  CODE_REVIEW_GUIDE.md  CONTRACT_UPGRADE_SOP.md  DATAFLOWS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  EMERGENCY_RUNBOOK.md  ENV_VALIDATION.md  FRONTEND_SPECIFICATION.md  HYBRID_ARCHITECTURE.md  INDEX.md  IN_DEPTH_REVIEW_REPORT.md  LAYERING.md  LOCAL_DEV.md  MASTER_KEY_ATTESTATION.md  MINIAPPS_CDN_SETUP.md  MINIAPPS_INTEGRATION.md  MINIAPP_AUTO_SUBMISSION.md  MINIAPP_OFFICIAL_SYNC.md  MODULE_RESPONSIBILITIES.md  MONOREPO_ARCHITECTURE.md  PRODUCTION_READINESS.md  PRODUCTION_READY_REPORT.md  QUICKSTART.md  README.md  SERVICE_LAYER_FUNCTIONALITY.md  SERVICE_LAYER_FUNCTIONALITY_CN.md  SESSION_SUMMARY.md  WORKFLOWS.md  alerts.md  architecture-layers.md  architecture_overview.md  blockchain-contracts.md  contract-system.md  core-engine.md  deployment-guide.md  developer-guide.md  (+49 more)
frontend/: README.md  index.html  package-lock.json  package.json
infra/: README.md
k8s/: namespaces.yaml  secrets.yaml.template
system/tee/sgx_enclave/: Cargo.toml  Makefile
system/tee/sgx_enclave/app/: Cargo.toml
system/tee/sgx_enclave/app/src/: main.rs
system/tee/sgx_enclave/bridge/: Cargo.toml  sgx_bridge.h
system/tee/sgx_enclave/bridge/src/: lib.rs
system/tee/sgx_enclave/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl
system/tee/sgx_enclave/enclave/src/: attestation.rs  crypto.rs  lib.rs  sealing.rs  types.rs
system/tee/sgx_enclave/scripts/: install_sgx_sdk.sh
(+9782 files in other folders)
