[workspace]
members = [
    "enclave",
    "bridge",
    "app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["R3E Network"]
license = "Apache-2.0"

[workspace.dependencies]
# SGX SDK - Apache Teaclave SGX SDK
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v2.0.0-preview" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v2.0.0-preview" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v2.0.0-preview" }
sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v2.0.0-preview" }
sgx_tseal = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v2.0.0-preview" }
sgx_tse = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v2.0.0-preview" }
sgx_rand = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v2.0.0-preview" }

# Common dependencies
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
base64 = { version = "0.21", default-features = false, features = ["alloc"] }

# For the untrusted app/bridge
libc = "0.2"
lazy_static = "1.4"
