[package]
name = "sgx_app"
version.workspace = true
edition.workspace = true
authors.workspace = true

# This is a placeholder for a test application
# The actual integration is done via the bridge library and Go CGO

[[bin]]
name = "sgx_test"
path = "src/main.rs"

[dependencies]
sgx_bridge = { path = "../bridge" }
