[package]
name = "sgx_bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "sgx_bridge"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
# Use this feature for simulation mode
sim = []

[dependencies]
# SGX untrusted runtime
sgx_types = { workspace = true }
sgx_urts = { workspace = true }

# For thread safety
lazy_static = "1.4"
parking_lot = "0.12"

# Logging
log = "0.4"
env_logger = "0.10"

[build-dependencies]
cc = "1.0"
