[package]
name = "enclave"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
name = "enclave"
crate-type = ["staticlib"]

[features]
default = []
# Use this feature for simulation mode (no SGX hardware required)
sim = []

[dependencies]
# SGX trusted runtime
sgx_tstd = { workspace = true }
sgx_types = { workspace = true }
sgx_tcrypto = { workspace = true }
sgx_tseal = { workspace = true }
sgx_tse = { workspace = true }
sgx_rand = { workspace = true }

# Serialization (no_std compatible)
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
cc = "1.0"
